[package]
name = "hews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.3.0", features = ["v3_18"] } 
reqwest = "0.9.5" 
serde_json = "1.0.33"
serde_derive = "1.0.82" 
serde = "1.0.82" 
cairo = "0.0.4"
